--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "web-profile",
   "version": "1.0.0",
   "scripts": {
-    "watch": "tailwindcss -i ./src/css/input.css -o ./public/css/output.css --watch",
-    "build": "tailwindcss -i ./src/css/input.css -o ./public/css/output.css --minify"
+    "watch": "tailwindcss -i ./src/css/input.css -o ./public/css/style.css --watch",
+    "build": "tailwindcss -i ./src/css/input.css -o ./public/css/style.css --minify"
   },
   "dependencies": {
     "@tailwindcss/cli": "^4.1.7",
